[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Card/Card.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Card/CardArrayMesh.tres" type="ArrayMesh" id=2]
[ext_resource path="res://Scenes/Card/CardOutlineMesh.tres" type="ArrayMesh" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.627451 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.88, 0.01, 1.28 )

[node name="Card" type="Spatial" groups=[
"CARD",
]]
script = ExtResource( 1 )

[node name="OutlineMesh" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 3 )
material/0 = SubResource( 1 )

[node name="CardMesh" type="MeshInstance" parent="."]
transform = Transform( 2.65431e-14, 4.15448e-07, 2.55, 1, -4.15448e-07, 0, 1.62921e-07, 2.55, -4.15448e-07, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null

[node name="KinematicBody" type="KinematicBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="input_event" from="KinematicBody" to="." method="_on_KinematicBody_input_event"]
[connection signal="mouse_entered" from="KinematicBody" to="." method="_on_KinematicBody_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody" to="." method="_on_KinematicBody_mouse_exited"]
